--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.13",
     "path": "^0.12.7",
     "react": "^16.5.0",
