--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "format": "prettier --write \"client/**/*.{js,jsx,css,json}\"",
+    "format:check": "prettier --list-different \"client/**/*.{js,jsx,css,json}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -d --watch",
@@ -40,6 +41,8 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "prop-types": "^15.6.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
