--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^5.6.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.11.1",
     "prop-types": "^15.6.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
