--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
     "prettier",
     "prettier/react"
   ],
-  "plugins": ["prettier"],
+  "rules": {
+    "no-console": 1
+  },
+  "plugins": ["react"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
