--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Greenfield Project  ## Team   - __Product Owner__: Jessica    - __Scrum Master__: Aiman   - __Development Team Members__: Anthony, Ryan, Justin ## Table of Contents 1. [Usage](#Usage) 1. [Requirements](#requirements) 1. [Development](#development)     1. [Installing Dependencies](#installing-dependencies)     1. [Tasks](#tasks) 1. [Team](#team) 1. [Contributing](#contributing) ## Usage > Some usage instructions ## Requirements - Node 0.10.x - Redis 2.6.x - Postgresql 9.1.x - etc - etc ## Development ### Installing Dependencies From within the root directory: ```sh sudo npm install -g bower npm install bower install ``` ### Roadmap View the project roadmap [here](LINK_TO_PROJECT_ISSUES) ## Contributing See [CONTRIBUTING.md](CONTRIBUTING.md) for contribution guidelines.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
+    "dev": "webpack-dev-server --open --mode development",
     "format": "prettier --write \"client/**/*.{js,jsx,css,json}\"",
     "format:check": "prettier --list-different \"client/**/*.{js,jsx,css,json}\"",
     "lint": "./node_modules/eslint/bin/eslint.js \"**/*.{js,jsx}\"",
@@ -38,8 +38,8 @@
     "react-dom": "^16.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
