--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
+    "enzyme": "^3.6.0",
     "eslint": "^5.6.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
+    "jest-serializer-enzyme": "^1.0.0",
     "prop-types": "^15.6.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
