--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "format:check": "prettier --list-different \"client/**/*.{js,jsx,css,json}\"",
     "lint": "./node_modules/eslint/bin/eslint.js \"**/*.{js,jsx}\"",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix \"**/*.{js,jsx}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d --watch",
-    "start": "nodemon ./server/server.js"
+    "test": "jest",
+    "test:update": "jest -u",
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
