Add npm test:coverage script to test the coverage using Istanbul

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "./node_modules/eslint/bin/eslint.js \"**/*.{js,jsx}\"",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix \"**/*.{js,jsx}\"",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "test:update": "jest -u",
     "start": "node ./server/server.js"
   },
