--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "prop-types": "^15.6.2",
     "webpack": "^4.17.2",
