--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:update": "jest -u",
+    "build": "./node_modules/webpack/bin/webpack.js -d --watch",
     "start": "node ./server/server.js"
   },
   "jest": {
