--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "kiddash",
+  "sideEffects": false,
   "version": "1.0.0",
   "description": "Greenfield Project  ## Team   - __Product Owner__: Jessica    - __Scrum Master__: Aiman   - __Development Team Members__: Anthony, Ryan, Justin ## Table of Contents 1. [Usage](#Usage) 1. [Requirements](#requirements) 1. [Development](#development)     1. [Installing Dependencies](#installing-dependencies)     1. [Tasks](#tasks) 1. [Team](#team) 1. [Contributing](#contributing) ## Usage > Some usage instructions ## Requirements - Node 0.10.x - Redis 2.6.x - Postgresql 9.1.x - etc - etc ## Development ### Installing Dependencies From within the root directory: ```sh sudo npm install -g bower npm install bower install ``` ### Roadmap View the project roadmap [here](LINK_TO_PROJECT_ISSUES) ## Contributing See [CONTRIBUTING.md](CONTRIBUTING.md) for contribution guidelines.",
   "main": "index.js",
   "scripts": {
     "db:seed": "node database/seedDatabase.js",
-    "dev": "webpack-dev-server --open --hot --mode development & nodemon ./server/server.js",
+    "devOld": "webpack-dev-server --open --hot --mode development & nodemon ./server/server.js",
+    "dev": "webpack --mode development --watch & nodemon ./server/server.js",
     "format": "prettier --write \"client/**/*.{js,jsx,css,json}\"",
     "format:check": "prettier --list-different \"client/**/*.{js,jsx,css,json}\"",
     "lint": "./node_modules/eslint/bin/eslint.js \"**/*.{js,jsx}\"",
@@ -13,7 +15,7 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:update": "jest -u",
-    "build": "./node_modules/webpack/bin/webpack.js -d --watch",
+    "build": "webpack --mode production",
     "start": "nodemon ./server/server.js"
   },
   "jest": {
