--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:coverage": "jest --coverage",
     "test:update": "jest -u",
     "build": "webpack --mode production",
-    "start": "nodemon ./server/server.js"
+    "start": "webpack-dev-server --mode development --open --hot & nodemon ./server/server.js"
   },
   "jest": {
     "snapshotSerializers": [
@@ -57,6 +57,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
@@ -67,6 +68,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.4.3",
     "prop-types": "^15.6.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
