--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "jest --coverage",
     "test:update": "jest -u",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open --hot & nodemon ./server/server.js"
+    "start": "webpack-dev-server --mode development --open & nodemon ./server/server.js"
   },
   "jest": {
     "snapshotSerializers": [
